...
            }
        } else {
            VStack {
                Image(systemName: "music.note")
                    .font(.title)
                    .foregroundColor(.secondary)
                Text("Coriander Player")
                    .font(.caption)
                    .foregroundColor(.secondary)
            }
            .containerBackground(for: .widget) {
                Color.clear
            }
...
