...
      builder: (context, _) {
        final contentList = RecentPlayService.instance.recentAudios;
        final multiSelectController = MultiSelectController<Audio>();

        return UniPage<Audio>(
          pref: AppPreference.instance.recentPlaysPagePref,
          title: "最近播放",
          subtitle: contentList.isEmpty ? null : "${contentList.length} 首乐曲",
          contentList: contentList,
          contentBuilder: (context, item, i, multiSelectController) =>
              AudioTile(
            audioIndex: i,
            playlist: contentList,
...
