...
          style: const ButtonStyle(
            fixedSize: WidgetStatePropertyAll(Size.fromHeight(40)),
          ),
        ));

        return PageScaffold(
          title: "云服务连接",
          subtitle: connections.isEmpty ? null : "${connections.length} 个连接",
          actions: actions,
          body: connections.isEmpty
              ? Center(
                  child: Column(
                    mainAxisAlignment: MainAxisAlignment.center,
...
