...
                          overflow: TextOverflow.ellipsis,
                          style: TextStyle(color: scheme.onSecondaryContainer),
                        ),
                        Text(
                          nowPlaying != null
                              ? nowPlaying.subtitleText
                              : "Enjoy music",
                          maxLines: 1,
                          overflow: TextOverflow.ellipsis,
                          style: TextStyle(color: scheme.onSecondaryContainer),
                        ),
                      ],
                    ),
...
